do changes in code and models
