# src/routes/lesson.routes.js
@@ -2,7 +2,7 @@ const express = require('express');
 const cloudinary = require('cloudinary').v2;
 const multer = require('multer');
 const { checkAuth } = require('../middleware/auth.middleware');
-const { handleCreateLessaon } = require('../controller/lesson.controller');
+const { handleCreateLessaon, deleteLesson } = require('../controller/lesson.controller');
 const lessonRouter = express.Router();
 
 cloudinary.config({
@@ -14,11 +14,12 @@ cloudinary.config({
 const storage = multer.memoryStorage();
 const upload = multer({ storage: storage });
 
-lessonRouter.post('/lessons/:courseId', checkAuth, upload.fields([
+lessonRouter.route('/lessons/:courseId').post(checkAuth, upload.fields([
   { name: 'video', maxCount: 1 },
   { name: 'image', maxCount: 1 },
   { name: 'pdf', maxCount: 1 }
 ]), handleCreateLessaon);
 
+lessonRouter.route('/lessons/:id').delete(checkAuth,deleteLesson)
 
 module.exports = lessonRouter;
